--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
